# Openfabric-NLP

./: .gitignore  data.txt  main.py  pyproject.toml
