[tool.poetry]
name = "openfabric-test"
version = "1.1"
description = "cognitive-assistant"
authors = ["Andrei"]

[tool.poetry.dependencies]
python = "^3.8"
openfabric-pysdk = "0.1.11"
tensorflow = "^2.x.x"
transformers = "^4.x.x"
protobuf = "^3.20.0"
numpy = "<1.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
werkzeug = "2.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
